examples/network-policy/backing-image-data-source-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backing-image-data-source
  namespace: longhorn-system
spec:
  podSelector:
    matchLabels:
      longhorn.io/component: backing-image-data-source
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          longhorn.io/component: manager
    - podSelector:
        matchLabels:
          longhorn.io/component: instance-manager
    - podSelector:
        matchLabels:
          longhorn.io/component: backing-image-manager
    - podSelector:
        matchLabels:
          longhorn.io/component: backing-image-data-source
