examples/network-policy/manager-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: longhorn-manager
  namespace: longhorn-system
spec:
  podSelector:
    matchLabels:
      longhorn.io/component: manager
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          longhorn.io/component: manager
    - podSelector:
        matchLabels:
          longhorn.io/component: ui
    - podSelector:
        matchLabels:
          longhorn.io/component: csi-plugin
    - podSelector:
        matchLabels:
          longhorn.io/managed-by: longhorn-manager
        matchExpressions:
          - { key: recurring-job.longhorn.io, operator: Exists }
    - podSelector:
        matchExpressions:
          - { key: longhorn.io/job-task, operator: Exists }
    - podSelector:
        matchLabels:
          longhorn.io/component: driver-deployer
