examples/network-policy/recovery-backend-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: longhorn-recovery-backend
  namespace: longhorn-system
spec:
  podSelector:
    matchLabels:
      app: longhorn-recovery-backend
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - protocol: TCP
      port: 9600
