examples/network-policy/ui-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: longhorn-ui
  namespace: longhorn-system
spec:
  podSelector:
    matchLabels:
      longhorn.io/component: ui
  policyTypes:
  - Ingress
  ingress:
  - from:
    # Depending on the ingress controller setup in your cluster, Change the following
    # info to allow the traffic from the ingress controller pods to Longhorn UI
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
      podSelector:
        matchLabels:
          app.kubernetes.io/component: controller
          app.kubernetes.io/instance: ingress-nginx
          app.kubernetes.io/name: ingress-nginx
