examples/network-policy/webhook-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: longhorn-webhook
  namespace: longhorn-system
spec:
  podSelector:
    matchLabels:
      app: longhorn-webhook
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - protocol: TCP
      port: 9443
